--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     </script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/custom.css">
+    <!-- Driver.js for guided tours -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.3.1/dist/driver.css">
+    <script src="https://cdn.jsdelivr.net/npm/driver.js@1.3.1/dist/driver.iife.js"></script>
 </head>
 <body class="bg-slate-50 dark:bg-slate-900 text-slate-800 dark:text-slate-200 h-screen flex flex-col overflow-hidden">
 
@@ -35,6 +38,10 @@
             </div>
 
             <div class="h-8 w-px bg-slate-200 dark:bg-slate-600 mx-2"></div>
+
+            <button id="btnHelp" class="text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400" title="Help & Tutorial">
+                <i class="fas fa-question-circle text-lg"></i>
+            </button>
 
             <button id="btnSettings" class="text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400" title="Settings">
                 <i class="fas fa-cog text-lg"></i>
