--- a/index.html
+++ b/index.html
@@ -310,6 +310,23 @@
                     </div>
                 </div>
 
+                <!-- Help & Tutorial Section -->
+                <div class="mb-6">
+                    <h4 class="text-sm font-bold text-slate-500 dark:text-slate-400 uppercase tracking-wider mb-3">Help & Tutorial</h4>
+                    <div class="bg-slate-50 dark:bg-slate-900 rounded-lg p-4 border border-slate-200 dark:border-slate-700">
+                        <button id="btnRestartTutorial" class="w-full flex items-center justify-between p-3 bg-white dark:bg-slate-800 hover:bg-blue-50 dark:hover:bg-blue-900/30 rounded-lg border border-slate-200 dark:border-slate-600 transition group">
+                            <div class="flex items-center gap-3">
+                                <i class="fas fa-graduation-cap text-blue-600 dark:text-blue-400"></i>
+                                <div class="text-left">
+                                    <div class="font-medium text-slate-700 dark:text-slate-200">Restart Tutorial</div>
+                                    <div class="text-xs text-slate-500 dark:text-slate-400">Show the guided tour again</div>
+                                </div>
+                            </div>
+                            <i class="fas fa-chevron-right text-slate-400 group-hover:text-blue-600 dark:group-hover:text-blue-400"></i>
+                        </button>
+                    </div>
+                </div>
+
                 <!-- Data Management Section -->
                 <div class="mb-6">
                     <h4 class="text-sm font-bold text-slate-500 dark:text-slate-400 uppercase tracking-wider mb-3">Data Management</h4>
