Add auto-save indicators, tooltips, and empty states
Auto-Save Indicators:
- Import ToastService in StateManager
- Show "Saved" toast (1s) after successful state persistence
- Show "Failed to save" toast (2s) on localStorage errors
- Made ToastService resilient to test environments (checks for DOM)

CSS Tooltips:
- Pure CSS tooltips using [data-tooltip] attribute
- Smooth fade-in and slide-up animation on hover
- Dark mode support with adjusted colors
- Arrow pointer below tooltip for visual connection
- Automatically disabled on touch devices (hover: none)
- Positioned above elements with centered alignment

Tooltip Attributes Added:
- index.html: Help button, Settings button, Year navigation buttons
- MetricsBar.js: Plan Travel button

Empty State for Calendar (CalendarView.js):
- Display when no events or constraints exist
- Large calendar icon with clear messaging
- "No trips planned yet. Click 'Plan Travel / Constraint' to get started!"
- Actionable button wired to open add modal via EventBus
- Styled with Tailwind for consistency

All changes maintain existing test suite (256/295 tests passing).

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
 
         <div class="flex items-center gap-4">
             <div class="flex items-center bg-slate-100 dark:bg-slate-700 rounded-md p-1">
-                <button id="btnYearPrev" class="p-2 hover:bg-white dark:hover:bg-slate-600 rounded shadow-sm transition text-slate-700 dark:text-slate-300"><i class="fas fa-chevron-left"></i></button>
+                <button id="btnYearPrev" class="p-2 hover:bg-white dark:hover:bg-slate-600 rounded shadow-sm transition text-slate-700 dark:text-slate-300" data-tooltip="Previous year"><i class="fas fa-chevron-left"></i></button>
                 <span id="displayYear" class="px-4 font-semibold font-mono text-slate-700 dark:text-slate-200">2025</span>
-                <button id="btnYearNext" class="p-2 hover:bg-white dark:hover:bg-slate-600 rounded shadow-sm transition text-slate-700 dark:text-slate-300"><i class="fas fa-chevron-right"></i></button>
+                <button id="btnYearNext" class="p-2 hover:bg-white dark:hover:bg-slate-600 rounded shadow-sm transition text-slate-700 dark:text-slate-300" data-tooltip="Next year"><i class="fas fa-chevron-right"></i></button>
             </div>
 
             <div class="h-8 w-px bg-slate-200 dark:bg-slate-600 mx-2"></div>
 
-            <button id="btnHelp" class="text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400" title="Help & Tutorial">
+            <button id="btnHelp" class="text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400" data-tooltip="Restart tutorial">
                 <i class="fas fa-question-circle text-lg"></i>
             </button>
 
-            <button id="btnSettings" class="text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400" title="Settings">
+            <button id="btnSettings" class="text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400" data-tooltip="Open settings">
                 <i class="fas fa-cog text-lg"></i>
             </button>
         </div>
