--- a/index.html
+++ b/index.html
@@ -376,22 +376,10 @@
                                 <i class="fas fa-palette text-indigo-600 dark:text-indigo-400"></i>
                                 <div class="text-left">
                                     <div class="font-medium text-slate-700 dark:text-slate-200">Manage Event Types</div>
-                                    <div class="text-xs text-slate-500 dark:text-slate-400">Create, edit, and delete custom trip types</div>
+                                    <div class="text-xs text-slate-500 dark:text-slate-400">Create, edit, and delete custom trip and constraint types</div>
                                 </div>
                             </div>
                             <i class="fas fa-chevron-right text-slate-400 group-hover:text-indigo-600 dark:group-hover:text-indigo-400"></i>
-                        </button>
-
-                        <!-- Manage Constraint Types -->
-                        <button id="btnManageConstraintTypes" class="w-full flex items-center justify-between p-3 bg-white dark:bg-slate-800 hover:bg-amber-50 dark:hover:bg-amber-900/30 rounded-lg border border-slate-200 dark:border-slate-600 transition group">
-                            <div class="flex items-center gap-3">
-                                <i class="fas fa-ban text-amber-600 dark:text-amber-400"></i>
-                                <div class="text-left">
-                                    <div class="font-medium text-slate-700 dark:text-slate-200">Manage Constraint Types</div>
-                                    <div class="text-xs text-slate-500 dark:text-slate-400">Create, edit, and delete custom constraint types</div>
-                                </div>
-                            </div>
-                            <i class="fas fa-chevron-right text-slate-400 group-hover:text-amber-600 dark:group-hover:text-amber-400"></i>
                         </button>
 
                         <!-- Manage Locations -->
