--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
 
             <div class="h-8 w-px bg-slate-200 dark:bg-slate-600 mx-2"></div>
 
+            <button id="btnAddPlan" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg shadow-sm transition flex items-center gap-2" data-tooltip="Plan travel or add constraint">
+                <i class="fas fa-plus"></i>
+                <span class="hidden sm:inline">Plan Travel / Constraint</span>
+            </button>
+
+            <div class="h-8 w-px bg-slate-200 dark:bg-slate-600 mx-2"></div>
+
+            <button id="btnHelp" class="text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400" data-tooltip="Help & Tutorial">
+                <i class="fas fa-question-circle text-lg"></i>
+            </button>
+
             <button id="btnSettings" class="text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400" data-tooltip="Open settings">
                 <i class="fas fa-cog text-lg"></i>
             </button>
