--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 
     <!-- Add Event/Constraint Modal -->
     <div id="addModal" class="modal fixed inset-0 bg-black/50 z-50 hidden flex items-center justify-center opacity-0 pointer-events-none">
-        <div class="bg-white dark:bg-slate-800 rounded-xl shadow-2xl w-full max-w-lg overflow-hidden">
-            <div class="bg-slate-50 dark:bg-slate-900 px-6 py-4 border-b border-slate-200 dark:border-slate-700 flex justify-between items-center">
+        <div class="bg-white dark:bg-slate-800 rounded-xl shadow-2xl w-full max-w-lg max-h-[90vh] overflow-hidden flex flex-col">
+            <div class="bg-slate-50 dark:bg-slate-900 px-6 py-4 border-b border-slate-200 dark:border-slate-700 flex justify-between items-center flex-shrink-0">
                 <h3 class="font-bold text-lg text-slate-700 dark:text-slate-200">Add to Plan</h3>
                 <button data-modal-close="addModal" class="text-slate-400 hover:text-slate-600 dark:hover:text-slate-300"><i class="fas fa-times"></i></button>
             </div>
 
-            <div class="p-6">
+            <div class="p-6 overflow-y-auto flex-1">
                 <!-- Tabs -->
                 <div class="flex border-b border-slate-200 dark:border-slate-600 mb-6">
                     <button class="tab-btn px-4 py-2 border-b-2 border-blue-600 text-blue-600 dark:text-blue-400 font-medium" data-tab="trip">Plan Trip</button>
