--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             </div>
         </div>
 
+        <!-- Metrics in Header -->
+        <div id="headerMetrics" class="flex items-center gap-6 text-xs flex-1 justify-center">
+            <!-- Populated by app.js -->
+        </div>
+
         <div class="flex items-center gap-4">
             <div class="flex items-center bg-slate-100 dark:bg-slate-700 rounded-md p-1">
                 <button id="btnYearPrev" class="p-2 hover:bg-white dark:hover:bg-slate-600 rounded shadow-sm transition text-slate-700 dark:text-slate-300" data-tooltip="Previous year"><i class="fas fa-chevron-left"></i></button>
@@ -55,11 +60,6 @@
             </button>
         </div>
     </header>
-
-    <!-- Metrics Bar -->
-    <div id="metricsBar" class="bg-white dark:bg-slate-800 border-b border-slate-200 dark:border-slate-700 px-6 py-2 flex gap-8 text-sm overflow-x-auto">
-        <!-- Populated by MetricsBar.js -->
-    </div>
 
     <!-- Main Content Area -->
     <main id="mainContent" class="flex-1 overflow-x-auto overflow-y-hidden relative">
