--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- Driver.js for guided tours -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.3.1/dist/driver.css">
     <script src="https://cdn.jsdelivr.net/npm/driver.js@1.3.1/dist/driver.js.iife.js"></script>
+    <!-- Google API Client Library for Drive integration -->
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://accounts.google.com/gsi/client"></script>
 </head>
 <body class="bg-slate-50 dark:bg-slate-900 text-slate-800 dark:text-slate-200 h-screen flex flex-col overflow-hidden">
 
@@ -410,6 +413,26 @@
                                 </div>
                             </div>
                             <i class="fas fa-chevron-right text-slate-400 group-hover:text-cyan-600 dark:group-hover:text-cyan-400"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Cloud Sync Section -->
+                <div class="mb-6">
+                    <h4 class="text-sm font-bold text-slate-500 dark:text-slate-400 uppercase tracking-wider mb-3">Cloud Sync</h4>
+                    <div class="bg-slate-50 dark:bg-slate-900 rounded-lg p-4 border border-slate-200 dark:border-slate-700 space-y-3">
+                        <!-- Google Drive -->
+                        <button id="btnDriveSettings" class="w-full flex items-center justify-between p-3 bg-white dark:bg-slate-800 hover:bg-blue-50 dark:hover:bg-blue-900/30 rounded-lg border border-slate-200 dark:border-slate-600 transition group">
+                            <div class="flex items-center gap-3">
+                                <i class="fab fa-google-drive text-blue-600 dark:text-blue-400 text-lg"></i>
+                                <div class="text-left flex-1">
+                                    <div class="font-medium text-slate-700 dark:text-slate-200">Google Drive</div>
+                                    <div id="driveStatus" class="text-xs text-slate-500 dark:text-slate-400 mt-1">
+                                        <i class="fas fa-times-circle text-slate-400"></i> Not Connected
+                                    </div>
+                                </div>
+                            </div>
+                            <i class="fas fa-chevron-right text-slate-400 group-hover:text-blue-600 dark:group-hover:text-blue-400"></i>
                         </button>
                     </div>
                 </div>
