--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
 
         <div class="flex items-center gap-4">
             <div class="flex items-center bg-slate-100 dark:bg-slate-700 rounded-md p-1">
-                <button id="btnYearPrev" class="p-2 hover:bg-white dark:hover:bg-slate-600 rounded shadow-sm transition text-slate-700 dark:text-slate-300" data-tooltip="Previous year"><i class="fas fa-chevron-left"></i></button>
+                <button id="btnYearPrev" class="p-2 hover:bg-white dark:hover:bg-slate-600 rounded shadow-sm transition text-slate-700 dark:text-slate-300" data-tooltip="Previous year" data-tooltip-position="bottom"><i class="fas fa-chevron-left"></i></button>
                 <span id="displayYear" class="px-4 font-semibold font-mono text-slate-700 dark:text-slate-200">2025</span>
-                <button id="btnYearNext" class="p-2 hover:bg-white dark:hover:bg-slate-600 rounded shadow-sm transition text-slate-700 dark:text-slate-300" data-tooltip="Next year"><i class="fas fa-chevron-right"></i></button>
+                <button id="btnYearNext" class="p-2 hover:bg-white dark:hover:bg-slate-600 rounded shadow-sm transition text-slate-700 dark:text-slate-300" data-tooltip="Next year" data-tooltip-position="bottom"><i class="fas fa-chevron-right"></i></button>
             </div>
 
             <div class="h-8 w-px bg-slate-200 dark:bg-slate-600 mx-2"></div>
 
-            <button id="btnAddPlan" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg shadow-sm transition flex items-center gap-2" data-tooltip="Plan travel or add constraint">
+            <button id="btnAddPlan" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg shadow-sm transition flex items-center gap-2" data-tooltip="Add trips, constraints, or batch plan multiple trips" data-tooltip-position="bottom">
                 <i class="fas fa-plus"></i>
                 <span class="hidden sm:inline">Plan Travel / Constraint</span>
             </button>
 
             <div class="h-8 w-px bg-slate-200 dark:bg-slate-600 mx-2"></div>
 
-            <button id="btnHelp" class="text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400" data-tooltip="Help & Tutorial">
+            <button id="btnHelp" class="text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400" data-tooltip="Show interactive tutorial" data-tooltip-position="bottom">
                 <i class="fas fa-question-circle text-lg"></i>
             </button>
 
-            <button id="btnSettings" class="text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400" data-tooltip="Open settings">
+            <button id="btnSettings" class="text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400" data-tooltip="Configure app settings and manage data" data-tooltip-position="bottom">
                 <i class="fas fa-cog text-lg"></i>
             </button>
         </div>
@@ -89,25 +89,25 @@
                 <form id="tripForm" class="space-y-4 tab-content block">
                     <div class="grid grid-cols-2 gap-4">
                         <div>
-                            <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1">Mode</label>
-                            <select id="tripMode" class="w-full border dark:border-slate-600 rounded p-2 text-sm bg-white dark:bg-slate-700 dark:text-slate-200">
+                            <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1" data-tooltip="Choose how to schedule this trip" data-tooltip-position="right">Mode</label>
+                            <select id="tripMode" class="w-full border dark:border-slate-600 rounded p-2 text-sm bg-white dark:bg-slate-700 dark:text-slate-200" data-tooltip="Flexible: get suggestions, Fixed: choose exact dates" data-tooltip-position="bottom">
                                 <option value="flexible">Flexible (Suggest Week)</option>
                                 <option value="fixed">Fixed Date</option>
                             </select>
                         </div>
                         <div>
-                            <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1">Type</label>
+                            <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1" data-tooltip="Select the type of business trip" data-tooltip-position="left">Type</label>
                             <div id="tripTypeContainer"></div>
                         </div>
                     </div>
 
                     <div>
-                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1">Title</label>
+                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1" data-tooltip="Give this trip a descriptive name" data-tooltip-position="right">Title</label>
                         <input type="text" id="tripTitle" class="w-full border dark:border-slate-600 rounded p-2 text-sm bg-white dark:bg-slate-700 dark:text-slate-200" placeholder="e.g. London Team Visit">
                     </div>
 
                     <div>
-                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1">Location</label>
+                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1" data-tooltip="Location affects consolidation and conflict detection" data-tooltip-position="right">Location</label>
                         <div id="tripLocationContainer"></div>
                         <p class="text-xs text-slate-400 dark:text-slate-500 mt-1">Required for optimization logic.</p>
                     </div>
@@ -115,7 +115,7 @@
                     <!-- Flexible Inputs -->
                     <div id="flexibleInputs" class="space-y-4">
                         <div>
-                            <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1">Planning Range</label>
+                            <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1" data-tooltip="Time window to search for optimal weeks" data-tooltip-position="right">Planning Range</label>
                             <select id="tripTimeRange" class="w-full border dark:border-slate-600 rounded p-2 text-sm bg-white dark:bg-slate-700 dark:text-slate-200">
                                 <option value="current-year">Current Year</option>
                                 <option value="current-quarter">Current Quarter</option>
@@ -124,7 +124,7 @@
                                 <option value="next-12-months">Next 12 Months</option>
                             </select>
                         </div>
-                        <button type="button" id="btnFindBest" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white py-2 rounded shadow-sm font-medium transition">
+                        <button type="button" id="btnFindBest" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white py-2 rounded shadow-sm font-medium transition" data-tooltip="Get top 3 optimal week suggestions" data-tooltip-position="bottom">
                             <i class="fas fa-magic mr-2"></i> Find Best Weeks
                         </button>
                         <button type="button" id="btnDeleteTripFlexible" class="w-full bg-red-600 hover:bg-red-700 text-white py-2 rounded shadow-sm font-medium transition hidden">
@@ -172,15 +172,15 @@
                 <!-- Constraint Form -->
                 <form id="constraintForm" class="space-y-4 tab-content hidden">
                     <div>
-                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1">Constraint Type</label>
+                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1" data-tooltip="Hard constraints block weeks, soft constraints discourage travel" data-tooltip-position="right">Constraint Type</label>
                         <div id="constraintTypeContainer"></div>
                     </div>
                     <div>
-                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1">Description</label>
+                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1" data-tooltip="Brief description of this constraint" data-tooltip-position="right">Description</label>
                         <input type="text" id="constraintTitle" class="w-full border dark:border-slate-600 rounded p-2 text-sm bg-white dark:bg-slate-700 dark:text-slate-200" placeholder="e.g. Family Trip">
                     </div>
                     <div class="flex items-center gap-2 mb-2">
-                        <input type="checkbox" id="multiAddModeConstraint" class="w-4 h-4 text-red-600 bg-white dark:bg-slate-700 border-slate-300 dark:border-slate-600 rounded focus:ring-red-500">
+                        <input type="checkbox" id="multiAddModeConstraint" class="w-4 h-4 text-red-600 bg-white dark:bg-slate-700 border-slate-300 dark:border-slate-600 rounded focus:ring-red-500" data-tooltip="Enable to add multiple non-contiguous date ranges" data-tooltip-position="right">
                         <label for="multiAddModeConstraint" class="text-xs font-medium text-slate-600 dark:text-slate-400">Multi-Add Mode (add multiple date ranges)</label>
                     </div>
                     <div id="constraintDateRangesContainer">
@@ -217,7 +217,7 @@
 
                     <!-- Planning Range -->
                     <div>
-                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1">Planning Range</label>
+                        <label class="block text-xs font-bold text-slate-500 dark:text-slate-400 uppercase mb-1" data-tooltip="Applies to all trips in this batch" data-tooltip-position="right">Planning Range</label>
                         <select id="batchTimeRange" class="w-full border dark:border-slate-600 rounded p-2 text-sm bg-white dark:bg-slate-700 dark:text-slate-200">
                             <option value="current-year">Current Year</option>
                             <option value="current-quarter">Current Quarter</option>
@@ -232,12 +232,12 @@
                         <!-- Dynamic batch trip inputs will be added here -->
                     </div>
 
-                    <button type="button" id="btnAddBatchTrip" class="w-full bg-slate-500 hover:bg-slate-600 text-white py-2 rounded shadow-sm font-medium transition">
+                    <button type="button" id="btnAddBatchTrip" class="w-full bg-slate-500 hover:bg-slate-600 text-white py-2 rounded shadow-sm font-medium transition" data-tooltip="Add another trip to this batch planning session" data-tooltip-position="bottom">
                         <i class="fas fa-plus mr-2"></i>Add Trip to Batch
                     </button>
 
                     <div class="flex gap-2 pt-4">
-                        <button type="button" id="btnGenerateBatchPlan" class="flex-1 bg-indigo-600 hover:bg-indigo-700 text-white py-3 rounded shadow-sm font-medium transition">
+                        <button type="button" id="btnGenerateBatchPlan" class="flex-1 bg-indigo-600 hover:bg-indigo-700 text-white py-3 rounded shadow-sm font-medium transition" data-tooltip="Get optimized suggestions for all trips" data-tooltip-position="bottom">
                             <i class="fas fa-magic mr-2"></i>Generate Optimal Plan
                         </button>
                     </div>
