--- a/index.html
+++ b/index.html
@@ -227,14 +227,34 @@
                         </select>
                     </div>
 
+                    <!-- Reference Date Selector (only shown when existing trips imported) -->
+                    <div id="batchReferenceDateSelector" class="hidden mt-4 p-3 bg-blue-50 dark:bg-blue-900/20 border border-blue-300 dark:border-blue-700 rounded">
+                        <label class="block text-sm font-semibold mb-2 text-slate-700 dark:text-slate-200">Calculate time range from:</label>
+                        <div class="space-y-2">
+                            <label class="flex items-center gap-2 cursor-pointer">
+                                <input type="radio" name="batchReferenceDate" value="earliest" checked class="cursor-pointer">
+                                <span class="text-sm text-slate-700 dark:text-slate-200">Earliest selected trip (<span id="earliestTripDate" class="font-medium">—</span>)</span>
+                            </label>
+                            <label class="flex items-center gap-2 cursor-pointer">
+                                <input type="radio" name="batchReferenceDate" value="current" class="cursor-pointer">
+                                <span class="text-sm text-slate-700 dark:text-slate-200">Current date (<span id="currentDate" class="font-medium">—</span>)</span>
+                            </label>
+                        </div>
+                    </div>
+
                     <!-- Batch Trips Container -->
                     <div id="batchTripsContainer" class="space-y-3 max-h-96 overflow-y-auto">
                         <!-- Dynamic batch trip inputs will be added here -->
                     </div>
 
-                    <button type="button" id="btnAddBatchTrip" class="w-full bg-slate-500 hover:bg-slate-600 text-white py-2 rounded shadow-sm font-medium transition" data-tooltip="Add another trip to this batch planning session" data-tooltip-position="bottom">
-                        <i class="fas fa-plus mr-2"></i>Add Trip to Batch
-                    </button>
+                    <div class="flex gap-2">
+                        <button type="button" id="btnAddBatchTrip" class="flex-1 bg-slate-500 hover:bg-slate-600 text-white py-2 rounded shadow-sm font-medium transition" data-tooltip="Add a new trip to this batch" data-tooltip-position="bottom">
+                            <i class="fas fa-plus mr-2"></i>Add New Trip
+                        </button>
+                        <button type="button" id="btnImportExistingTrips" class="flex-1 bg-indigo-500 hover:bg-indigo-600 text-white py-2 rounded shadow-sm font-medium transition" data-tooltip="Import existing trips to reoptimize" data-tooltip-position="bottom">
+                            <i class="fas fa-file-import mr-2"></i>Import Existing Trips
+                        </button>
+                    </div>
 
                     <div class="flex gap-2 pt-4">
                         <button type="button" id="btnGenerateBatchPlan" class="flex-1 bg-indigo-600 hover:bg-indigo-700 text-white py-3 rounded shadow-sm font-medium transition" data-tooltip="Get optimized suggestions for all trips" data-tooltip-position="bottom">
@@ -461,6 +481,37 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Trip Import Selection Modal -->
+    <div id="tripImportModal" class="modal fixed inset-0 bg-black/50 z-50 hidden flex items-center justify-center opacity-0 pointer-events-none">
+        <div class="bg-white dark:bg-slate-800 rounded-xl shadow-2xl w-full max-w-2xl max-h-[80vh] overflow-hidden">
+            <div class="bg-slate-50 dark:bg-slate-900 px-6 py-4 border-b border-slate-200 dark:border-slate-700 flex justify-between items-center">
+                <h3 class="font-bold text-lg text-slate-700 dark:text-slate-200">
+                    <i class="fas fa-file-import mr-2 text-indigo-600 dark:text-indigo-400"></i>
+                    Import Existing Trips
+                </h3>
+                <button data-modal-close="tripImportModal" class="text-slate-400 hover:text-slate-600 dark:hover:text-slate-300">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="p-6 overflow-y-auto max-h-[calc(80vh-140px)]">
+                <div class="text-sm text-slate-600 dark:text-slate-400 mb-4">
+                    Select existing trips to reoptimize. Selected trips will be temporarily removed from the schedule to find better weeks.
+                </div>
+                <div id="tripImportList" class="space-y-2">
+                    <!-- Populated dynamically -->
+                </div>
+            </div>
+            <div class="bg-slate-50 dark:bg-slate-900 px-6 py-4 border-t border-slate-200 dark:border-slate-700 flex gap-3">
+                <button data-modal-close="tripImportModal" class="flex-1 bg-slate-200 dark:bg-slate-600 hover:bg-slate-300 dark:hover:bg-slate-500 py-2 rounded text-sm font-medium text-slate-700 dark:text-slate-200">
+                    Cancel
+                </button>
+                <button id="btnConfirmImportTrips" class="flex-1 bg-indigo-600 hover:bg-indigo-700 text-white py-2 rounded text-sm font-medium">
+                    <i class="fas fa-check mr-2"></i>Import Selected
+                </button>
             </div>
         </div>
     </div>
